--- a/package.json
+++ b/package.json
@@ -1,38 +1,67 @@
 {
-  "name": "map-promisified",
-  "version": "0.4.0",
+  "name": "@vinayakkulkarni/map-promisified",
+  "version": "0.0.1",
   "author": {
-    "name": "soal",
-    "email": "sorrrow.about.alice@pm.me",
-    "url": "https://github.com/soal"
+    "name": "Vinayak Kulkarni",
+    "email": "vinayak.kulkarni@live.com",
+    "url": "https://vinayakkulkarni.dev"
   },
-  "description": "Wrapper for Mapbox Gl JS library that gives nice Promise-based API to asynchronous map functions",
+  "description": "Wrapper for Mapbox GL JS library that gives nice Promise-based API for asynchronous map functions",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/soal/map-promisified.git"
   },
   "private": false,
-  "main": "dist/mapPromisify.js",
+  "sideEffects": false,
+  "main": "dist/map-promisified.umd.js",
+  "module": "dist/map-promisified.esm.js",
+  "unpkg": "dist/map-promisified.min.js",
+  "jsdelivr": "dist/map-promisified.min.js",
+  "cdn": "dist/map-promisified.js",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "scripts": {
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava",
+    "test:snapshot": "ava --update-snapshots",
+    "build": "npm run bundle && npm run bundle:min",
+    "bundle": "rollup -c build/rollup.config.js",
+    "bundle:min": "rollup -c build/rollup.config.min.js",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lintfix": "npm run lint:eslint:fix && npm run lint:prettier:fix",
+    "lint:eslint": "eslint 'src/**/*.{js,ts}'",
+    "lint:eslint:fix": "eslint --fix 'src/**/*.{js,ts}'",
+    "lint:prettier": "prettier --check \"{,!(node_modules|dist)/**/}*.{js,ts}\"",
+    "lint:prettier:fix": "prettier --write \"{,!(node_modules|dist)/**/}*.{js,ts}\""
+  },
+  "peerDependencies": {
+    "mapbox-gl": "1.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@ava/babel": "^1.0.1",
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
+    "@rollup/plugin-commonjs": "^13.0.0",
     "@types/mapbox-gl": "^0.49.1",
-    "babel-loader": "^8.0.4",
-    "cache-loader": "^1.2.5",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "fork-ts-checker-webpack-plugin": "^0.4.14",
-    "terser-webpack-plugin": "^1.1.0",
-    "thread-loader": "^1.2.0",
-    "ts-loader": "^5.3.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6",
-    "webpack": "^4.25.0",
-    "webpack-cli": "^3.1.2"
+    "@types/node": "^14.0.22",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "@vinayakkulkarni/prettier-config-vue": "^1.0.0",
+    "@vue/test-utils": "^1.0.3",
+    "ava": "^3.10.1",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
+    "rollup": "^2.21.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "typescript": "^3.9.6"
   }
 }
