--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "rollup": "^2.21.0",
     "rollup-plugin-babel": "^4.4.0",
