fix: upgrade npm ci step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm i
+        run: npm ci --prefer-offline --no-audit --no-optional
 
       - name: Run linter(s) 👀
         uses: wearerequired/lint-action@v1
