--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
     "prepare": "husky install"
   },
   "peerDependencies": {
-    "mapbox-gl": "1.11.1"
+    "mapbox-gl": "1.13.1"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@rollup/plugin-commonjs": "^19.0.0",
-    "@types/mapbox-gl": "^1.13.1",
+    "@types/mapbox-gl": "1.13.1",
     "@types/node": "^15.12.4",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "@vinayakkulkarni/prettier-config-vue": "^1.0.0",
     "@vue/test-utils": "^1.2.1",
     "ava": "^3.15.0",
