--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,48 +4,53 @@ on:
   push:
     branches:
       - main
-      - dev
-  pull_request:
+      - next
+  pull_request_target:
     branches:
       - main
-      - dev
+      - next
+
+permissions:
+  checks: write
+  contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request_target' && github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   ci:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest]
         node: [16]
 
     steps:
-      - name: Setup node.js
+      - name: Check out repository (push)
+        if: ${{ github.event_name == 'push' || github.event_name == 'pull_request_target' || github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' }}
+        uses: actions/checkout@v2
+
+      - name: Check out repository (pull_request_target)
+        if: ${{ github.event_name == 'pull_request_target' }}
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Setup node env 📦
         uses: actions/setup-node@v2.4.0
         with:
           node-version: ${{ matrix.node }}
+          registry-url: https://registry.npmjs.org
           check-latest: true
+          cache: 'npm'
 
-      - name: Upgrade npm 🥳
+      - name: Upgrade npm 🎉
         run: npm i -g npm@latest
 
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Get npm cache directory
-        id: npm-cache
-        run: echo "::set-output name=dir::$(npm config get cache)"
-
-      - name: Cache node_modules
-        id: cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+      - name: Install dependencies 🚀
         run: npm ci --prefer-offline --no-audit --no-optional
 
       - name: Run linter(s) 👀
@@ -62,5 +67,5 @@ jobs:
           prettier_extensions: js,ts,vue
           neutral_check_on_warning: true
 
-      - name: Unit Tests using Ava
-        run: npm run test
+      - name: Run build 🏁
+        run: npm run build
