--- a/package.json
+++ b/package.json
@@ -1,69 +1,91 @@
 {
   "name": "@vinayakkulkarni/map-promisified",
   "version": "0.0.1",
-  "author": {
-    "name": "Vinayak Kulkarni",
-    "email": "vinayak.kulkarni@live.com",
-    "url": "https://vinayakkulkarni.dev"
-  },
   "description": "Wrapper for Mapbox GL JS library that gives nice Promise-based API for asynchronous map functions",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vinayakkulkarni/map-promisified.git"
-  },
-  "private": false,
-  "sideEffects": false,
+  "types": "types/index.d.ts",
   "main": "dist/map-promisified.umd.js",
   "module": "dist/map-promisified.esm.js",
   "unpkg": "dist/map-promisified.min.js",
   "jsdelivr": "dist/map-promisified.min.js",
   "cdn": "dist/map-promisified.js",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
-  },
   "scripts": {
-    "test": "ava",
-    "test:snapshot": "ava --update-snapshots",
-    "build": "npm run bundle && npm run bundle:min",
-    "bundle": "rollup -c build/rollup.config.js",
-    "bundle:min": "rollup -c build/rollup.config.min.js",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lintfix": "npm run lint:eslint:fix && npm run lint:prettier:fix",
-    "lint:eslint": "eslint 'src/**/*.{js,ts}'",
-    "lint:eslint:fix": "eslint --fix 'src/**/*.{js,ts}'",
-    "lint:prettier": "prettier --check \"{,!(node_modules|dist)/**/}*.{js,ts}\"",
-    "lint:prettier:fix": "prettier --write \"{,!(node_modules|dist)/**/}*.{js,ts}\"",
-    "prepare": "husky install"
+    "build": "rimraf dist && npm run bundle && npm run bundle:min",
+    "bundle": "rollup -c build/rollup.config.ts",
+    "bundle:min": "rollup -c build/rollup.config.min.ts",
+    "test": "echo 'test!'",
+    "prepare": "husky install",
+    "lint": "npm run lint:prettier && npm run lint:eslint",
+    "lintfix": "npm run lint:prettier:fix && npm run lint:eslint:fix",
+    "lint:js": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
+    "lint:eslint:fix": "eslint --fix \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
+    "lint:prettier": "prettier --check \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
+    "lint:prettier:fix": "prettier --write \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
+    "lint-staged": "lint-staged",
+    "release": "shipjs prepare",
+    "release:auto": "shipjs prepare --yes",
+    "release:dry": "shipjs prepare --dry-run"
   },
   "peerDependencies": {
     "mapbox-gl": "1.13.1"
   },
   "devDependencies": {
-    "@ava/babel": "^2.0.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-beep": "^0.2.0",
     "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-sucrase": "^4.0.0",
     "@types/mapbox-gl": "1.13.2",
     "@types/node": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "@vinayakkulkarni/prettier-config-vue": "^1.0.0",
-    "@vue/test-utils": "^1.2.2",
-    "ava": "^3.15.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^36.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.4.0",
     "rollup": "^2.56.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^7.0.2",
+    "shipjs": "0.23.3",
     "typescript": "^4.4.3"
-  }
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "keywords": [
+    "mapbox-gl",
+    "map promisified",
+    "promisify",
+    "wrapper"
+  ],
+  "author": {
+    "name": "Vinayak Kulkarni",
+    "email": "inbox.vinayak@gmail.com",
+    "url": "https://vinayakkulkarni.dev"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vinayakkulkarni/map-promisified.git"
+  },
+  "private": false,
+  "sideEffects": false,
+  "bugs": {
+    "url": "https://github.com/vinayakkulkarni/v-offline/issues"
+  },
+  "homepage": "https://github.com/vinayakkulkarni/v-offline#readme"
 }
