feat(ts): add types

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && npm run bundle && npm run bundle:min",
+    "build:dts": "npx -p typescript tsc ./src/index.ts --declaration --allowJs --emitDeclarationOnly --outDir types",
     "bundle": "rollup -c build/rollup.config.ts",
     "bundle:min": "rollup -c build/rollup.config.min.ts",
     "test": "echo 'test!'",
@@ -21,10 +22,10 @@
     "lint": "npm run lint:prettier && npm run lint:eslint",
     "lintfix": "npm run lint:prettier:fix && npm run lint:eslint:fix",
     "lint:js": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
-    "lint:eslint:fix": "eslint --fix \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
-    "lint:prettier": "prettier --check \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
-    "lint:prettier:fix": "prettier --write \"{,!(node_modules|dist)/**/}*.{js,ts,vue}\" --ignore-path .gitignore",
+    "lint:eslint": "eslint \"{,!(node_modules|dist)/**/}*.{js,ts}\" --ignore-path .gitignore",
+    "lint:eslint:fix": "eslint --fix \"{,!(node_modules|dist)/**/}*.{js,ts}\" --ignore-path .gitignore",
+    "lint:prettier": "prettier --check \"{,!(node_modules|dist)/**/}*.{js,ts}\" --ignore-path .gitignore",
+    "lint:prettier:fix": "prettier --write \"{,!(node_modules|dist)/**/}*.{js,ts}\" --ignore-path .gitignore",
     "lint-staged": "lint-staged",
     "release": "shipjs prepare",
     "release:auto": "shipjs prepare --yes",
@@ -47,7 +48,7 @@
     "@types/node": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
-    "@vinayakkulkarni/prettier-config-vue": "^1.0.0",
+    "@vinayakkulkarni/prettier-config": "^1.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
